<resources>
    <string name="app_name">Marvel Wiki</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">341400052952462</string>
    <string name="fb_login_protocol_scheme">fb341400052952462</string>
    <string name="hint_Login">Login</string>
    <string name="hint_Senha">Password</string>
    <string name="botao_login">Enter</string>
    <string name="personagens">Characters</string>
    <string name="cadastro">Register</string>
    <string name="nome">Name</string>
    <string name="txtSobre">About</string>
    <string name="cadastrar">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="txtTelefone">Call for us: (11)960879465</string>
    <string name="Usuarios">Users</string>
    <string name="Editar">Edit</string>
    <string name="Deletar">Delete</string>
    <string name="alterar">Change</string>
    <string name="deletar">Delete</string>
    <string name="findmarvel">Find out where the Marvel is</string>
    <string name="Sair">Exit</string>
    <string name="cbLogin">Keep Connected</string>
    <string name="NomeDev">Rafael Luiz Mazzini Arnosti</string>
    <string name="Ver">Version of System : 1.0</string>
</resources>
